TWC3119-611 - Fix PCT Scrollbar overflow (#2057)
* TWC3119-611 - Pricing Table - Updated component widths to allow scrollbars to appear

* TWC3119-611 - Cleanup comment

--- a/Intel.MyDeals/Client/src/app/contract/pricingTable/pricingTable.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/pricingTable/pricingTable.component.css
@@ -81,7 +81,7 @@
 }
 
 #contractContainerWrapper {
-    height: 100%;
+    height: calc(100% - 95px);
     padding: 0 0 0 0 !important;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
